<resources>
    <string name="app_name">Health Tracker</string>
    <string name="author_mark">Powered by H. Jordan</string>
    <string name="imc">IMC</string>
    <string name="tmb">TMB</string>
    <string name="water">Água</string>
    <string name="bpm">BPM</string>
    <string name="tgc">TGC</string>
    <string name="imc_info">O Índice de Massa Corporal (IMC) é um índice que mede se você está abaixo, dentro ou acima do peso, de acordo com a relação entre seu peso e altura. </string>
    <string name="height">Altura (cm)</string>
    <string name="weight">Peso (kg)</string>
    <string name="age">Idade</string>
    <string name="calc">Calcular</string>
    <string name="toast_invalid_info">Informe valores válidos que não comecem com 0</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="imc_normal_weight">Peso normal</string>
    <string name="imc_so_above_weight">Moderadamente acima do peso</string>
    <string name="imc_above_1">Obesidade grau I</string>
    <string name="imc_above_2">Obesidade grau II</string>
    <string name="imc_above_3">Obesidade grau III</string>
    <string name="dialog_imc_title">Seu IMC é %1$.2f</string>
    <string name="dialog_tmb_title">Sua TMB é %1$.2f Kcal</string>
    <string name="dialog_bpm_title">Sua TGC é %1$.2f%%</string>
    <string name="tmb_info">A Taxa de Metabolismo Basal (TMB) é o cálculo usado para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="ok">Ok</string>
    <string name="save">Salvar</string>
    <string name="saved">Salvo com sucesso!</string>
    <string name="tgc_info">A frequência cardíaca é o valor que representa o número de vezes que o coração bate por minuto. Insira seus dados na calculadora para saber qual a frequência cardíaca recomendada para você ou para entender se a sua frequência está adequada, de acordo com a idade</string>
    <string name="sex">Sexo (Masculino/Feminino)</string>
    <string name="masculine">Masculino</string>
    <string name="feminine">Feminino</string>
    <string name="water_info">É de extrema importância para a saúde conhecer qual a quantidade ideal de água que deve ser ingerida por dia, preencha as informações abaixo para saber a quantidade ideal para você</string>
    <string name="dialog_water_message">A quantidade de água ideal para você é de %1$d mL ou %2$.2f L diários</string>
    <string name="dialog_water_title_above">Parabéns, você consome além do ideal</string>
    <string name="dialog_water_title_below">Cuidado, você consome abaixo do ideal</string>
    <string name="water_quantity"> Quantidade diária consumida (mL)</string>
    <string name="exercise_quantity">Tempo de exercício físico diário:</string>
    <string name="hours">Horas</string>
    <string name="minutes">Minutos</string>
    <string name="congratulations">Parabéns</string>
    <string name="warning">Cuidado</string>
    <string name="above">acima</string>
    <string name="below">abaixo</string>
    <string name="list_calc_register_imc">O seu IMC em %1$s foi de %2$.2f. Estado: %3$s</string>
    <string name="list_calc_register_tmb">A sua TMB em %1$s foi de %2$.2f</string>
    <string name="search">Buscar</string>
    <string name="refs_title">Todas as informações necessárias para realizar os cálculos deste aplicativo estão disponíveis em:</string>
    <string name="imc_ref">https://www.tuasaude.com/calculadora/imc/</string>
    <string name="tmb_ref">https://nutrium.com/blog/pt-br/calculadora-da-equacao-de-harris-benedict-para-nutricionistas/</string>
    <string name="hr_ref">https://www.tuasaude.com/frequencia-cardiaca/</string>
    <string name="water_ref">https://blog.portoseguro.com.br/quantos-litros-de-agua-devemos-beber-por-dia/</string>
    <string name="date_access">Acessados em 27/12/2023 17:52h</string>
    <string name="dialog_title_delete_history">Deseja excluir o histórico de todos os registros salvos?</string>
    <string name="yes">Sim</string>
    <string name="back">Voltar</string>
    <string name="toast_delete_history">Histórico deletado com sucesso!</string>
    <string name="toast_delete_history_error">Não há registros salvos para serem deletados</string>
    <string name="heart_rate">Frequência cardíaca (bpm em repouso)</string>
    <string name="bellow_normal_heart_rate">abaixo do normal</string>
    <string name="excellent_heart_rate">excelente</string>
    <string name="optimum_heart_rate">ótima</string>
    <string name="good_heart_rate">boa</string>
    <string name="normal_heart_rate">normal</string>
    <string name="less_good_heart_rate">menos boa</string>
    <string name="bad_heart_rate">ruim</string>
    <string name="toast_bellow_age">A idade mínima necessária é de 18 anos</string>
    <string name="men">um homem</string>
    <string name="women">uma mulher</string>
    <string name="dialog_message_bpm">O número de uma frequência cardíaca %1$s para %2$s de %3$d anos está %4$s bpm</string>
    <string name="dialog_title_bpm">A sua frequência cardíaca é %1$s!</string>
    <string name="current_hear_rate_range">entre %1$d a %2$d</string>
    <string name="current_hear_rate_range_bad">acima de %1$d</string>
    <string name="current_hear_rate_range_bellow_normal">abaixo de %1$d</string>
    <string name="list_calc_register_bpm">A sua frequência cardíaca estava %1$s com %3$.0f bpm em %2$s</string>
    <string name="info">O presente aplicativo apenas tem por objetivo fornecer informações prévias e aproximadas dos cálculos realizados, em todos os casos é sempre recomendado o atendimento ou acompanhamento com um profissional da área de saúde</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="go_to_login">Já tem uma conta? <b>Faça login.</b></string>
    <string name="go_to_register">Não tem uma conta? <b>Registre-se.</b></string>
    <string name="empty_field">Campo vazio</string>
    <string name="confirm_password_not_equals">As senhas não são iguais</string>
    <string name="password_very_short">A senha deve ter no mínimo 8 caracteres</string>
    <string name="register">Criar conta</string>
    <string name="login">Entrar</string>
    <string name="my_medications">Meus medicamentos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medication_name">Nome do medicamento</string>
    <string name="medication_frequency">Frequência</string>
    <string name="medication_schedules">Horários:</string>
    <string name="cancel">Cancelar</string>
    <string name="create">Criar</string>
    <string name="add">Adicionar</string>
    <string name="medications">Medicamentos</string>
    <string name="food_scanner">Scanner de alimentos</string>
    <string name="schedules_not_found">Informe os horários</string>
    <string name="sunday">D</string>
    <string name="monday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">Q</string>
    <string name="thursday">Q</string>
    <string name="friday">S</string>
    <string name="saturday">S</string>
    <string name="select_days">Selecione os dias:</string>
</resources>