<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TmbActivity"
    style="@style/DefaultLinearLayout">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_corner_rounded">

        <TextView
            android:id="@+id/tmb_info"
            style="@style/DefaultTextView"
            android:text="@string/tmb_info"/>

    </LinearLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/tmb_height"
        style="@style/DefaultEditText"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/tmb_weight"
        style="@style/DefaultEditText"
        android:hint="@string/weight" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_tmb"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radio_button_masculine_tmb"
            android:text="@string/masculine"
            android:layout_marginRight="40dp"/>
        <RadioButton
            android:id="@+id/radio_button_feminine_tmb"
            android:text="@string/feminine"/>
    </RadioGroup>

    <EditText
        android:id="@+id/tmb_age"
        style="@style/DefaultEditText"
        android:hint="@string/age" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AutoTextViewForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/auto_lifestyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/tmb_button"
        style="@style/DefaultButton"
        android:text="@string/calc" />


</LinearLayout>