<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TgcActivity"
    style="@style/DefaultLinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/shape_bottom_corner_rounded"
        android:gravity="center">

        <ImageView
            android:id="@+id/vector_main"
            android:layout_width="73dp"
            android:layout_height="67dp"
            android:src="@drawable/health_metrics_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/imc_info"
        style="@style/DefaultTextView"
        android:text="@string/tgc_info"
        android:textColor="@color/red_end"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/tgc_value_imc"
        android:layout_marginTop="20dp"
        style="@style/DefaultEditText"
        android:hint="@string/imc"
        android:inputType="numberDecimal"
        android:maxLength="6" />

    <RadioGroup
        android:id="@+id/tgc_radio_group_sex"
        style="@style/DefaultAlignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tgc_radio_masculine"
            android:layout_marginRight="40dp"
            android:text="@string/masculine"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/tgc_radio_feminine"
            android:text="@string/feminine"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/tgc_age"
        style="@style/DefaultEditText"
        android:hint="@string/age" />

    <Button
        android:id="@+id/tgc_button"
        style="@style/DefaultButton"
        android:backgroundTint="@color/black"
        android:text="@string/calc" />

</LinearLayout>