<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLinearLayout"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/shape_bottom_corner_rounded"
        android:gravity="center">

        <ImageView
            android:id="@+id/vector_main"
            android:layout_width="73dp"
            android:layout_height="67dp"
            android:src="@drawable/health_metrics_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/imc_info"
        style="@style/DefaultTextView"
        android:text="@string/imc_info"
        android:textColor="@color/red_end"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/imc_height"
        style="@style/DefaultEditText"
        android:layout_marginTop="20dp"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/imc_weight"
        style="@style/DefaultEditText"
        android:hint="@string/weight" />


    <Button
        android:id="@+id/imc_button"
        style="@style/DefaultButton"
        android:text="@string/calc" />

</LinearLayout>