<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/default_item_background_without_borders"
    android:orientation="vertical"
    tools:context=".feature.main.view.MainActivity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".feature.main.view.MainActivity">

        <ImageView
            android:id="@+id/delete_routine_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/red_end" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/DefaultTextInputLayout"
            android:hint="@string/medication_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medication_name_edit_text"
                style="@style/Theme.HealthTracker.DefaultTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_days"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sunday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_monday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_tuesday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_wednesday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_thursday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_friday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_saturday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/day_circle_background"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="@color/black" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/medication_schedules"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_schedule_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:backgroundTint="@color/red_center"
                android:text="@string/add"
                app:icon="@drawable/ic_add" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_schedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            tools:itemCount="7"
            tools:listitem="@layout/schedule_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                style="@style/Theme.HealthTracker.HTButton"
                android:layout_width="127dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Theme.HealthTracker.HTButton"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>