<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLinearLayout"
    tools:context=".feature.heartRate.view.HeartRateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <androidx.constraintlayout.widget.ConstraintLayout style="@style/ConstraintLayoutForHeader">-->

<!--            <ImageButton-->
<!--                android:id="@+id/arrow_refs_hr"-->
<!--                style="@style/ImageButtonArrowBack"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/vector_main"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <ImageView-->
<!--                android:id="@+id/vector_main"-->
<!--                style="@style/ImageAppLogo"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <ImageButton-->
<!--                android:id="@+id/historic_refs_hr"-->
<!--                style="@style/ImageButtonHistory"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@+id/vector_main"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <TextView
            style="@style/DefaultTextView"
            android:layout_marginTop="10dp"
            android:text="@string/tgc_info"
            android:textColor="@color/red_end" />

        <EditText
            android:id="@+id/hr_edit_heart_rate"
            style="@style/DefaultEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/heart_rate"
            android:inputType="numberDecimal"
            android:maxLength="6" />

        <EditText
            android:id="@+id/hr_age"
            style="@style/DefaultEditText"
            android:hint="@string/age" />

        <RadioGroup
            android:id="@+id/hr_radio_group_sex"
            style="@style/DefaultAlignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/hr_radio_masculine"
                android:layout_marginRight="40dp"
                android:buttonTint="@color/red_end"
                android:text="@string/masculine"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/hr_radio_feminine"
                android:buttonTint="@color/red_end"
                android:text="@string/feminine"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/hr_button"
            style="@style/DefaultButton"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/black"
            android:text="@string/calc" />
    </LinearLayout>
</ScrollView>