<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLinearLayout"
    tools:context=".feature.water.view.WaterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/ConstraintLayoutForHeader">

            <ImageButton
                android:id="@+id/arrow_refs_water"
                style="@style/ImageButtonArrowBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vector_main"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/vector_main"
                style="@style/ImageAppLogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/water_info"
            style="@style/DefaultTextView"
            android:layout_marginTop="10dp"
            android:text="@string/water_info"
            android:textColor="@color/red_end" />

        <EditText
            android:id="@+id/water_weight"
            style="@style/DefaultEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/water_age"
            style="@style/DefaultEditText"
            android:hint="@string/age" />

        <EditText
            android:id="@+id/water_quantity"
            style="@style/DefaultEditText"
            android:hint="@string/water_quantity"
            android:maxLength="4" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/water_button"
            style="@style/DefaultButton"
            android:text="@string/calc" />

    </LinearLayout>
</ScrollView>