<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="?colorOnPrimary"
    android:orientation="vertical"
    tools:context=".feature.login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/health_metrics"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    style="@style/Theme.HealthTracker.DefaultTextInputEditText"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    style="@style/Theme.HealthTracker.DefaultTextInputEditText"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/Theme.HealthTracker.HTButton"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/login_go_to_register" />

    <TextView
        android:id="@+id/login_go_to_register"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:background="?colorOnPrimary"
        android:padding="24dp"
        android:text="@string/go_to_register"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>